# bevy_editor_pls

./: Cargo.toml
crates/bevy_editor_pls/: Cargo.toml
crates/bevy_editor_pls/src/: controls.rs  lib.rs
crates/bevy_editor_pls_core/: Cargo.toml
crates/bevy_editor_pls_core/src/: editor.rs  editor_window.rs  lib.rs
crates/bevy_editor_pls_default_windows/: Cargo.toml
crates/bevy_editor_pls_default_windows/src/: assets.rs  diagnostics.rs  gizmos.rs  graph.rs  inspector.rs  lib.rs  logging.rs  metrics.rs  renderer.rs  resources.rs
crates/bevy_editor_pls_default_windows/src/cameras/: camera_2d_panzoom.rs  camera_3d_free.rs  camera_3d_panorbit.rs  mod.rs
crates/bevy_editor_pls_default_windows/src/debug_settings/: debugdump.rs  mod.rs
crates/bevy_editor_pls_default_windows/src/hierarchy/: mod.rs
crates/bevy_editor_pls_default_windows/src/utils/: log_plugin.rs  open.rs
