[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.11.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jakobhellermann/bevy_editor_pls"
description = "In-App editor tools for bevy apps"
readme = "README.md"

[workspace.dependencies]
bevy_editor_pls = { version = "0.11.0", path = "crates/bevy_editor_pls" }
bevy_editor_pls_core = { version = "0.11.0", path = "crates/bevy_editor_pls_core" }
bevy_editor_pls_default_windows = { version = "0.11.0", path = "crates/bevy_editor_pls_default_windows" }

dyn-clone = "1.0"
bevy-inspector-egui = "0.30.0"
egui = "0.31.1"
egui_dock = "0.16.0"
transform-gizmo-bevy = "0.5"
bevy-trait-query = "0.7.0"

[patch.crates-io]
transform-gizmo-bevy = { git = "https://github.com/ActuallyHappening/transform-gizmo" }
bevy-inspector-egui = { path = "..//bevy-inspector-egui/crates/bevy-inspector-egui" }

[profile.dev.package."*"]
opt-level = 2

