[package]
name = "bevy_editor_pls_core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "bevy_window",
] }
bevy-inspector-egui.workspace = true
bevy-trait-query.workspace = true
dyn-clone.workspace = true
indexmap = "2"
egui_dock.workspace = true
polonius-the-crab = "*"
