[package]
name = "bevy_editor_pls_default_windows"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true

[features]
bevy_metrics_dashboard = ["dep:bevy_metrics_dashboard"]
default = [ "bevy_metrics_dashboard", "bevy-inspector-egui/highlight_changes" ]

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "bevy_scene",
    "bevy_text",
    "bevy_ui",
    "bevy_sprite",
    "bevy_pbr",
    "bevy_core_pipeline",
] }
bevy_metrics_dashboard = { workspace = true, optional = true }
bevy_editor_pls_core.workspace = true
bevy-inspector-egui.workspace = true
bevy_egui.workspace = true
# bevy_mod_picking = { git = "https://github.com/aevyrie/bevy_mod_picking", rev = "7a9ffd020b530acef25c8cf8bc9475b7a13bd353", default-features = false, features = [
#     "backend_raycast",
#     "backend_egui",
#     "backend_sprite",
#     "backend_bevy_ui",
# ] }
indexmap = "2"
pretty-type-name = "1.0"
bevy_mod_debugdump = "0.12"
opener = "0.6.0"
transform-gizmo-bevy.workspace = true
